# LeaDeLe

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.Rmd  leadele.html
app/: CMakeLists.txt
app/leadele-linear-model/: CMakeLists.txt  main.cpp
cmake/: leadeleConfig.cmake.in
docs/: 01-intro.Rmd  02-supervised_learning.Rmd  2-requirements.html  3-supervised-learning.html  404.html  _bookdown.yml  _site.yml  index.Rmd  index.html
docs/_book/: 3.1-linear-model.html  reference-keys.txt
pkg/env/: leadele.yaml
src/: CMakeLists.txt
src/data/: data.hpp  image.hpp  mnist.hpp  rounding.hpp
src/learning/: linear-model.hpp
