############################## -*- Mode: Cmake -*- ############################
##
## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

add_subdirectory(leadele-linear-model)

######################################################################
### CMakeLists.txt ends here
