## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

project(leadele-linear-model)

## #################################################################
## Sources
## #################################################################

set(${PROJECT_NAME}_SOURCES main.cpp)

## #################################################################
## Build rules
## #################################################################
add_executable(${PROJECT_NAME}
  ${${PROJECT_NAME}_SOURCES})

## #################################################################
## Install rules
## #################################################################

install(TARGETS ${PROJECT_NAME}
   BUNDLE DESTINATION bin
  RUNTIME DESTINATION bin)

######################################################################
### CMakeLists.txt ends here
